# afk-host

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  RESUME.md  WAYLAND_TEST_PLAN.md  pubspec.yaml
.codex/: TODO.md  session-summary.md
cli/: afk  package.json
cli/src/: main.ts  notify.ts  setup.ts  socket.ts  status.ts
lib/: main.dart
lib/models/: paired_client.dart  window_info.dart
lib/services/: app_host_service.dart  auto_update_service.dart  cli_server.dart  crypto_service.dart  cursor_service.dart  device_storage.dart  display_wake_service.dart  input_service.dart  launch_at_login_service.dart  log_service.dart  network_monitor_service.dart  pairing_service.dart  permissions_service.dart  remote_session_manager.dart  signaling_service.dart  webrtc_service.dart  window_manager_service.dart
lib/theme/: app_theme.dart
lib/ui/: onboarding_view.dart  settings_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  AppState.swift  CursorMonitor.swift  DebugProfile.entitlements  DisplayWake.swift  Info.plist  InputInjection.swift  LaunchAtLogin.swift  MainFlutterWindow.swift  (+6 more)
macos/Runner.xcodeproj/: project.pbxproj
pipewire_video_capture/: pubspec.yaml
pipewire_video_capture/linux/: CMakeLists.txt  pipewire_video_capture_plugin.cc
pipewire_video_capture/linux/include/pipewire_video_capture/: pipewire_video_capture_plugin.h
windows/: CMakeLists.txt
(+16 files in other folders)
